# pyautogui2

./: .gitignore  AUTHORS.txt  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/get-started/: installation.md  migration-v1-v2.md  quickstart.md
docs/guides/: dialogs.md  keyboard.md  pointer.md  screen.md  settings.md  tweening.md  types.md
docs/internals/: keyboard.md  linux.md  osal.md
docs/support/: changelog.md  contributing.md  troubleshooting.md
docs/tests/: dump_pytest_fixtures.py  index.md  pytest_fixture_graph.dot
src/pyautogui2/: __init__.py  core.py  settings.py
src/pyautogui2/controllers/: __init__.py  abstract_cls.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/: __init__.py  abstract_cls.py  platform_info.py
src/pyautogui2/osal/linux/: __init__.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/desktops/: __init__.py
src/pyautogui2/osal/linux/desktops/_shared/: pointer.py
src/pyautogui2/osal/linux/desktops/cinnamon/: __init__.py  pointer.py
src/pyautogui2/osal/linux/desktops/gnome/: __init__.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/desktops/kde/: __init__.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/desktops/mate/: __init__.py  pointer.py
src/pyautogui2/osal/linux/desktops/xfce/: __init__.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/display_servers/: __init__.py
src/pyautogui2/osal/linux/display_servers/wayland/: __init__.py  _common.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/display_servers/wayland/compositor/: __init__.py
src/pyautogui2/osal/linux/display_servers/wayland/compositor/gnome_shell/: __init__.py  _backend.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/display_servers/wayland/compositor/kwin/: __init__.py  _backend.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/linux/display_servers/x11/: __init__.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/macos/: __init__.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/osal/windows/: __init__.py  _common.py  dialogs.py  keyboard.py  pointer.py  screen.py
src/pyautogui2/utils/: abstract_cls.py  exceptions.py  keyboard_layouts.py  lazy_import.py  singleton.py  tweening.py  types.py
src/pyautogui2/utils/cli/: verify.py
src/pyautogui2/utils/decorators/: __init__.py  failsafe.py  log_screenshot.py  pause.py
tests/: conftest.py
tests/fixtures/: common.py  core.py  helpers.py  lib.py
tests/fixtures/controller/: dialogs.py  keyboard.py  manager.py  pointer.py  screen.py
tests/fixtures/osal/linux/: common.py  osal_builder.py
tests/fixtures/osal/linux/compositor/: gnome_shell.py  gnome_shell_real.py
tests/fixtures/osal/linux/desktop_environment/: gnome.py  kde.py  xfce.py
tests/fixtures/osal/linux/display_server/: wayland.py  x11.py
tests/fixtures/osal/macos/: common.py
tests/fixtures/osal/windows/: common.py
tests/fixtures/utils/: tweening.py
tests/fixtures/utils/decorators/: failsafe.py  log_screenshot.py  pause.py
tests/mocks/lib/: mock_mouseinfo.py  mock_pygetwindow.py  mock_pymsgbox.py  mock_pyscreeze.py  mock_pytweening.py
tests/mocks/osal/generic/: base.py  mock_dialogs_osal.py  mock_keyboard_osal.py  mock_pointer_osal.py  mock_screen_osal.py
tests/mocks/osal/linux/: mock_backend_gnome_shell.py  mock_dbus.py  mock_gio_glib.py  mock_parts.py  mock_subprocess.py  mock_uinput.py  mock_xlib.py
tests/mocks/osal/macos/: mock_appkit.py  mock_launch_services.py  mock_quartz.py  mock_subprocess.py
tests/mocks/osal/windows/: mock_ctypes.py  mock_kernel32.py  mock_user32.py  mock_winreg.py
tests/test_api/: conftest.py  test_api_entrypoint.py  test_core.py
tests/test_controller/: conftest.py  test_dialogs.py  test_keyboard.py  test_keyboard_real.py  test_manager.py  test_pointer.py  test_pointer_real.py  test_screen.py  test_screen_real.py
tests/test_integration/: __init__.py  conftest.py  test_installation_common.py  test_installation_macos.py  test_installation_wayland.py  test_installation_wayland_gnome_shell.py  test_installation_windows.py  test_installation_x11.py
tests/test_osal/: test_init.py  test_platform_info.py
tests/test_osal/linux/: conftest.py  test_dialogs_part.py  test_init.py  test_keyboard_part.py  test_loaders.py  test_pointer_part.py  test_screen_part.py
tests/test_osal/linux/desktop_environment/: __init__.py
tests/test_osal/linux/desktop_environment/gnome/: __init__.py  conftest.py  test_pointer_part.py
tests/test_osal/linux/desktop_environment/kde/: __init__.py  conftest.py  test_pointer_part.py
tests/test_osal/linux/desktop_environment/xfce/: __init__.py  conftest.py  test_pointer_part.py
tests/test_osal/linux/display_server/: __init__.py
tests/test_osal/linux/display_server/wayland/: __init__.py  conftest.py  test_backend_real.py  test_common.py  test_keyboard_part.py  test_pointer_part.py  test_screen_part.py
tests/test_osal/linux/display_server/wayland/compositor/: conftest.py
tests/test_osal/linux/display_server/wayland/compositor/gnome_shell/: test_backend_real.py  test_dialogs_part.py  test_keyboard_part.py  test_pointer_part.py  test_screen_part.py
tests/test_osal/linux/display_server/wayland/compositor/gnome_shell/extension/: conftest.py  test_extension_real.py
tests/test_osal/linux/display_server/x11/: __init__.py  conftest.py  test_keyboard_part.py  test_pointer_part.py  test_screen_part.py
tests/test_osal/macos/: conftest.py  test_dialogs.py  test_init.py  test_keyboard.py  test_pointer.py  test_screen.py
tests/test_osal/windows/: conftest.py  test_common.py  test_dialogs.py  test_init.py  test_keyboard.py  test_pointer.py  test_screen.py
tests/test_utils/: conftest.py  test_abstract_cls.py  test_lazy_import.py  test_singleton.py  test_tweening.py  test_types.py
tests/test_utils/decorators/: conftest.py  test_failsafe.py  test_log_screenshot.py  test_pause.py
(+4 files in other folders)
